--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                <img class="product-image" src="images/orange.png" alt="">
            </div>
            <div class="color">
-               <span class="orange active" data-image="images/orange.png" data-color="hsl(170, 73%, 53%)"></span>
-               <span class="green" data-image="images/green.png" data-color="hsl(263, 58%, 46%)"></span>
-               <span class="black" data-image="images/black.png" data-color="hwb(308 11% 53%)"></span>
-               <span class="red" data-image="images/red.png" data-color="hsl(115, 41%, 50%)"></span>
+               <span class="orange active" data-image="/images/orange.png" data-color="hsl(170, 73%, 53%)"></span>
+               <span class="green" data-image="/images/green.png" data-color="hsl(263, 58%, 46%)"></span>
+               <span class="black" data-image="/images/black.png" data-color="hwb(308 11% 53%)"></span>
+               <span class="red" data-image="/images/red.png" data-color="hsl(115, 41%, 50%)"></span>
            </div>
            <div class="title">
                Velocity Nitro Men's Running Shoes
